--- a/Jingburger.html
+++ b/Jingburger.html
@@ -171,7 +171,7 @@
 
       <ul>6월
           <ul><a href="https://cafe.naver.com/steamindiegame/6319401">02일</a> - <a href="https://youtu.be/8Uq-0R-dSuM">너뮤 늦어땨 ,, (잔잔노가리 , 귀신썰 , 헬스가리)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6333343">02일</a> - <a href="https://youtu.be/CZhS79HCqz4">근육통 레게노 (헬스가리 , 밥버거 센세 - 주르르 2편 ,</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6333343">02일</a> - <a href="https://youtu.be/CZhS79HCqz4">근육통 레게노 (헬스가리 , 밥버거 센세 - 주르르 2편)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6354121">04일</a> - </a href="">일이 너무 많아요옹 잰잰 일뱅! 🤪</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6382138">05일</a> - <a href="https://youtu.be/q_knFAmuEbY">왁타버스 고멤가요제 드래푸또 (고멤가요제 드래프트 , 마지막 재회 같이보기 , 또 나만 빼고 떡볶이)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6396990">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/AZbn7QiW0">비오는 월요일,,,오늘은 민수데이입니다 ^^ !민수데이★ (발로란트 , 민수데이 3회차 - 애니 오프닝 월드컵 128강) </a></ul>
