--- a/Viichan.html
+++ b/Viichan.html
@@ -51,7 +51,7 @@
       <ul>10월
         <ul>02일 - <a href="https://youtu.be/JI1JR500I3g">잔잔 바리바리 (뢴트 소집해제 , 마크 , 이세돌 어몽어스 합방)</a></ul>
         <ul>05일 - <a href="https://youtu.be/j6SMxF_7IaM">좋화좋은 화요일이라는 뜻▲ (노래뱅(튤립있다!) , 팬게임 , VRC탸니) (4:54:00~3:00:00까지 뮤트 , 영상 있으신분 제공해주시면 감사합니다)</a></ul>
-        <ul>31일 - <a href="https://youtu.be/z479KgGwAgM">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
+        <ul>31일 - </a href="https://youtu.be/z479KgGwAgM">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
       </ul>
       <p>　</p>
     
@@ -226,13 +226,13 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/AqHNMaK1Ewk">5시) 마크 공포맵! (물쏟았다!)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6771703">05일</a> - <a href="https://youtu.be/UAGCKXgsyg0">5시) 마크 공포맵! (송출컴 어쩌지 , AS알아볼게요)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6782920">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/KNmrOhY5n">정상영업 합니다★ (송출컴 이야기 , 수리썰 , 녹음썰 , Unpacking , 발로란트)(주술회전 패러디op삭제 필요 영상길어서 추후수정 요망)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">8시) 발로란트 합방~!!! (발로란트 내전 , 먹가리 , 2팀 개꿀잼 디코 모음)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6797061">07일</a> - <a href="https://youtu.be/Hx7iKzW9jlo">8시) 발로란트 합방~!!!● (발로란트 내전 , 먹가리 , 2팀 개꿀잼 디코 모음)(저작권크리 음원교체)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6807681">08일</a> - <a href="https://youtu.be/ygQJRHQAhHo">불금 드가자~~~~ (애니 캐릭터 월드컵 1024강 , 뱅종곡 - 슈가송과 비터스텝)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6818818">09일</a> - <a href="https://youtu.be/2k-GpEqE91I">비챤등장~! (노래뱅 , VRC맵 탐방(맥퀸 , 범퍼카운전) , 우마무스메 , 빌보두)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/SrPlYHsw5">방가방가류★ (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)(저작권크리)(길이때문에 수정불가 편집요망)</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/la8VCYnQ6xM">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6919234">17일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/4RPK6NFbF">5시반) VRC 풀트! 신규 인트로 + 아웃트로 촬영★<br>
                                                                                                                       (VRC풀트뱅 , 고라니댄스 , 100만 - 다시 만난 세계 , 노래뱅 , 스타 여자아이돌 노래 유즈맵 , 십덕노래 유즈맵 , 노래로 보는 22년 왁타 상반기 , 섬머타임 팬영상 , 루석바에서 비챤시까지 노래뱅)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/6947284">19일</a> - <a href="https://youtu.be/Z2SY6MWTrWs">이요오오오오오옹 (고,챤 공지,도네 돚거 , 폴가이즈 , 음식가리 , 추억가리 , 부모님 이야기 , VR챗 시작한 계기 , 노래뱅)</a></ul>
@@ -255,16 +255,12 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7170140">05일</a> - <a href="https://youtu.be/KMPwzKVn6OU">공포겜...ㅎ (가족 여행 이야기 , 세구,챠니 상호 고로시 , 게임이야기 , IB)</a><br>
                                                                       　　 - <a href="https://youtu.be/wrqBCrMPxD0">공포겜...ㅎㅎ (IB , 인스타 , 일상 썰 , 궁극기 월드컵)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7173545">06일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t">특별해질 토요일!!!!!★ (스튜디오 노가리 , 공포 영화 노가리 , Jpop월드컵 64강 찍먹 , 빌보두 , 운동썰)(저작권 크리)(영상길이 문제로 수정불가)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd">행복한 일요일입니다~!!!!!(트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/6771703">07일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd">행복한 일요일입니다~!!!!!★ (트위치 프로필변경 , 넥와인드 , Phony X Daybreak frontline Remix(feat. Ahoy!! 우리는 비챤해적단) , 구챤,뉴챤비교 , 노래추천 , 침대 노가리 , 로아 쿠크세이튼,아브렐슈드 , 위대한 쇼맨 같이보기 , 뮤지컬+노래가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7213635">10일</a> - <a href="https://youtu.be/0GHwsNDsXT4">비온다!!!!!!!! (스튜디오 누수썰 , 팬무비 Rumor , VRC회식,노래방 , 2차 MMD월드 , 언니야 릴스 탐방)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7248386">13일</a> - <a href="https://youtu.be/HvsK5H9V51o">토요일!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!` (데숙챤 , 요리가리 , 빌보두 , 챤냥냥 , 날씨와 태몽 , 하루일과)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7260941">14일</a> - <a href="https://youtu.be/zfDbSN29Mz8">6시) 비타토닉스 (이세돌 1년전 오늘 , 태그 커스텀 , 비타토닉스 , 팬게임 - 망냥냥의 탈출 , 노래가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7290506">16일</a> - <a href="https://youtu.be/8GaD924BMCI">VRC 버츄얼마켓 탐방</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6834151">10일</a> - <a href="https://youtu.be/1rsxlXt2xV8">MBTI 재검사 (애착 헤드셋 , 포케! , MBTI재검사 , 세븐나이츠 광고)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6858396">12일</a> - <a href="https://youtu.be/noSCOT4jLBI">우와 일은 정말 즐거워~! (오니가 없는 사이에 MV , 아버지 차 타며 있던 썰 , 게임가리 , HADES)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/6891154">15일</a> - <a href="https://youtu.be/ni34S7iVu9I">방가방가류 (하트 , 아이마스+노래가리 , 스타 유즈맵 노래 맞추기)</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/6901535">16일</a> - <a href="https://youtu.be/h0yxKApStF8">[이번엔 진짜 함] 4시) 마인크래프트 공포 탈출맵 (마크 공포 탈출맵 , 우마무스메 2기 같이보기 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7319504">19일</a> - <a href="https://youtu.be/9DAeyAv3PEc">안녕하세요 불금뿌셔!!!!!!!!!!<br>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7319504">19일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ">안녕하세요 불금뿌셔!!!!!!!!!!★<br>
                                                                                                                       (구매 자랑 , 스튜디오 시공 썰 , V-log관련 , 발컨 도입 , 세포키우기 , 주폭소년단 - 파라다이스 , 이세돌 1주년 기념 - 소녀와 마법의 공간MV , 핫쇼츠 챌린지 , You리믹스 ,비챤 노래 볶음밥 Ver.2 , 1탄 재감상 , 이세돌 사망 월드컵 , Cult of the Lamb)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7331457">20일</a> - <a href="https://youtu.be/A46alrH0_GM">해피 주말! (일식 노래 추천 , 마크 공주를 지켜라 , 빌보두 , 일정짜기 , 노래뱅 , 노래 깨부썰 , 왼쪽 무릎이 약하다)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7347869">21일</a> - <a href="https://youtu.be/YwGNWvWl0D4">6시 도전! 라니벨 (가이드 보컬 썰 , 노래뱅  , 도전 라니벨)</a></ul>
