--- a/Viichan.html
+++ b/Viichan.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>이세계 아이돌</title>
+  <title> <img src="Pic\살랑챤.webp"> </title>
 </head>
 <body>
   <span style="line-height:160%">
