--- a/Viichan.html
+++ b/Viichan.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title> <img src="Pic\살랑챤.webp"> </title>
+  <title> 챠니  </title>
 </head>
 <body>
   <span style="line-height:160%">
 
   <header>
-    <h1>이세계 아이돌 - 비챤</h1>
+    <h1><img src="Pic\살랑챤.webp"></h1>
   </header>
 
   <section>
