--- a/Viichan.html
+++ b/Viichan.html
@@ -9,7 +9,7 @@
   <span style="line-height:160%">
 
   <header>
-    <h1><img src="Pic\살랑챤.webp"></h1>
+    <h1><img src="Pic\살랑챤.webp" width="60%"" height="40%"></h1>
   </header>
 
   <section>
