--- a/Viichan.html
+++ b/Viichan.html
@@ -9,7 +9,8 @@
   <span style="line-height:160%">
 
   <header>
-    <h1><img src="Pic\살랑챤.webp" width="50%"" height="20%"></h1>
+    <h1><img src="Pic\살랑챤.webp" width="25%"></h1>
+    <h1>이세계 아이돌 - 비챤</h1>
   </header>
 
   <section>
