--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
     <ul>11월
         <ul>05일 - <a href="https://youtu.be/pzgoKTDg-mI" target="_blank">편집자모집 긴급공지 + VR사진작가 모십니다 (풀트부분만 , 풀버전아님)</a></ul>
-        <ul>12일 - <a href="https://youtu.be/8gmwGoaLqbk" target="_blank">오늘부터 2일..?? (롯데월드 면접가리 , 풀버전아님)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3908093" target="_blank">12일</a> - <a href="https://youtu.be/8gmwGoaLqbk" target="_blank">오늘부터 2일..?? (롯데월드 면접가리 , 풀버전아님)</a></ul>
         
       </ul>
       <p>　</p>
@@ -78,7 +78,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">15일</a> - 왕지각대장 죄송합니다!!!!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4400593" target="_blank">16일</a> - 오늘 태어났습니다!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4421943" target="_blank">18일</a> - 할 얘기가 많군요 ^-^</a></ul>
-          <ul>19일</a> - 특훈이닷 ଘ(੭ˊ꒳ˋ)੭✧</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4409947" target="_blank">19일</a> - 특훈이닷 ଘ(੭ˊ꒳ˋ)੭✧</a></ul>
           <ul>21일</a> - 짧뱅입니닷!</a></ul>
           <ul>22일</a> - 8시) 롤 자운리그</a></ul>
           <ul>23일</a> - 진짜 왕짧뱅입니다</a></ul>
@@ -124,7 +124,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5030465" target="_blank">08일</a> - 안녕하세용!!!!!!!</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5044924" target="_blank">09일</a> - <a href="https://youtu.be/0vSXEgZ78Zg" target="_blank">6시 취기를빌려 최초공개</a> </ul>   
           <ul><a href="https://cafe.naver.com/steamindiegame/5062791" target="_blank">10일</a> - <a href="https://youtu.be/tHLdZ0QGhDY" target="_blank">감사합니다!!!! (취기를 빌려 비하인드 , 쇼케이스 풀트준비 , 신의상 잠옷  , 겨울봄 쇼케이스)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5078795" target="_blank">11일</a> - 6시) 겨울봄 공개 !</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/5078795" target="_blank">11일</a> - <a href="https://youtu.be/Gzt62BJ9930" target="_blank">6시) 겨울봄 공개 ! (덕틀즈 멤버 선정  , 겨울봄 공개 , 노래뱅)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5105682" target="_blank">12일</a> - 겨울봄같은 날씨..^^*</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5129952" target="_blank">13일</a> - <a href="https://youtu.be/tPq9jZtHQZo" target="_blank">5시 일식밴드 덕틀즈 (덕틀즈 , 사이언티스트 티저)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5150627" target="_blank">14일</a> - <a href="https://youtu.be/pRxpbeqMnJw" target="_blank">4시반 풀트띠 (교복 풀트뱅)</a></ul>
