--- a/Jingburger.html
+++ b/Jingburger.html
@@ -160,7 +160,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/5918642" target="_blank">04일</a> - </a href="" target="_blank">냥</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5985483" target="_blank">08일</a> - </a href="" target="_blank">슈슈슉</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6000420" target="_blank">09일</a> - <a href="https://youtu.be/fh0OkVrAn_0" target="_blank">（︶^︶） (춋토 왁굳쨩 하야쿠 뱅온시오제 , 큐티 , 프로미넌스 포커 무스메 , 뽀삐 플레이 타임 챕터 2 , 프로미넌스 포커) </a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6026130" target="_blank">11일</a> - </a href="https://youtu.be/jYwb5Xj3YLo" target="_blank">음,,, (배럭돌리기 , 먹가리(첫 뷔페 , 라멘) , 돌솥 포장이요 , 왁타버스 합방 - 프로미넌스 포커 , 컴퓨터가리 ,발로란트)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6026130" target="_blank">11일</a> - <a href="https://youtu.be/jYwb5Xj3YLo" target="_blank">음,,, (배럭돌리기 , 먹가리(첫 뷔페 , 라멘) , 돌솥 포장이요 , 왁타버스 합방 - 프로미넌스 포커 , 컴퓨터가리 ,발로란트)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6038088" target="_blank">12일</a> - </a href="" target="_blank">리방 잔잔뱅</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6038088" target="_blank">12일</a> - </a href="" target="_blank">전 굽는날</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6055952" target="_blank">14일</a> - </a href="" target="_blank">나랑 같이 일해용 (도네소리X)</a></ul>
@@ -193,7 +193,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6453440" target="_blank">10일</a> - </a href="" target="_blank">ㅇ<-<</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6470055" target="_blank">11일</a> - </a href="" target="_blank">잰잰소통머시깽</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6501182" target="_blank">13일</a> - </a href="" target="_blank">오늘은 뭘할까나 ~.~</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6509321" target="_blank">14일</a> - <a href="" target="_blank">비가 왕창 내리는 날 </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6509321" target="_blank">14일</a> - </a href="" target="_blank">비가 왕창 내리는 날 </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6525299" target="_blank">15일</a> - </a href="" target="_blank">버거싶은밤 라디오 2화</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6581737" target="_blank">19일</a> - <a href="https://youtu.be/N8y2j2mW7aM" target="_blank">끼야호 (자운버거 , 포로리 더빙 버거)</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6593982" target="_blank">20일</a> - <a href="https://youtu.be/J1jVScm3swU" target="_blank">헉 징버거의 상태가!!!! (첫 페이셜 , 발로란트 , 민수데이 4회차 - 똥파이더맨)</a></ul>
