--- a/Jingburger.html
+++ b/Jingburger.html
@@ -124,7 +124,7 @@
           <ul></a href="" target="_blank">26일</a> - ㅇ<-<</ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5359408" target="_blank">27일</a> - 테스트뱅</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5371649" target="_blank">28일</a> - ~ ㅁ~</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/5404838" target="_blank">30일</a> - 띠용</a></ul> target="_blank"
+          <ul><a href="https://cafe.naver.com/steamindiegame/5404838" target="_blank">30일</a> - 띠용</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/5419900" target="_blank">31일</a> - 초짧뱅</a></ul>
           
         </ul>
