--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
 
     <ul>9월 - <a href="https://cafe.naver.com/steamindiegame/7885171" target="_blank">月刊 ゔぃちゃん 9月号</a>(다시보기 내려가는대로 업데이트 될 예정)
-       <ul><a href="https://cafe.naver.com/steamindiegame/7477189" target="_blank">02일</a> - </a href="https://youtu.be/OSjUgElBiCc" target="_blank">6시) 커버곡 공개 (커버곡 가리 , 베이스 스테이션 설치 썰 , Fire Again공개 및 후기 , 마인크래프트 엔잡그 , B챤만화 7화 , Joker 감상 , Eville 튜토리얼)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7489786" target="_blank">03일</a> - </a href="https://youtu.be/KMPwzKVn6OU" target="_blank">라니들이랑 에빌하기~~</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7477189" target="_blank">02일</a> - <a href="https://youtu.be/OSjUgElBiCc" target="_blank">6시) 커버곡 공개 (커버곡 가리 , 베이스 스테이션 설치 썰 , Fire Again공개 및 후기 , 마인크래프트 엔잡그 , B챤만화 7화 , Joker 감상 , Eville 튜토리얼)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7489786" target="_blank">03일</a> - </a href="https://youtu.be/Grcp6XTtIjw" target="_blank">라니들이랑 에빌하기~~ (발로란트 , 주잘알 테스트 , 챤잘알 테스트 , 스튜디오 이사 노가리 , 빌보두)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7508699" target="_blank">04일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t" target="_blank">오늘 목이 굉장히 좋다....!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd" target="_blank">초짧뱅및공지</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - </a href="https://youtu.be/0GHwsNDsXT4" target="_blank">잠을......잤습니다...</a></ul>
