--- a/Jingburger.html
+++ b/Jingburger.html
@@ -192,7 +192,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6446017" target="_blank">09일</a> - <a href="https://youtu.be/VxJJ8LKvhC8" target="_blank">3시 버거싶은 밤 잔잔 라디오 (버거싶은 밤 1화)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6453440" target="_blank">10일</a> - </a href="" target="_blank">ㅇ<-<</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6470055" target="_blank">11일</a> - </a href="" target="_blank">잰잰소통머시깽</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6501182" target="_blank">13일</a> - </a href="" target="_blank">오늘은 뭘할까나 ~.~</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6501182" target="_blank">13일</a> - <a href="https://youtu.be/q5HfRM5eqlU" target="_blank">오늘은 뭘할까나 ~.~ (발로란트 , 민수데이 4회 - 하프라이프 : 알릭스 , 날씨의 아이 같이보기 , 쉬버리2)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6509321" target="_blank">14일</a> - </a href="" target="_blank">비가 왕창 내리는 날 </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6525299" target="_blank">15일</a> - </a href="" target="_blank">버거싶은밤 라디오 2화</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6581737" target="_blank">19일</a> - <a href="https://youtu.be/N8y2j2mW7aM" target="_blank">끼야호 (자운버거 , 포로리 더빙 버거)</ul>
