--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
 
     <ul>9월 - <a href="https://cafe.naver.com/steamindiegame/7885171" target="_blank">月刊 ゔぃちゃん 9月号</a>(다시보기 내려가는대로 업데이트 될 예정)
        <ul><a href="https://cafe.naver.com/steamindiegame/7477189" target="_blank">02일</a> - <a href="https://youtu.be/OSjUgElBiCc" target="_blank">6시) 커버곡 공개 (커버곡 가리 , 베이스 스테이션 설치 썰 , Fire Again공개 및 후기 , 마인크래프트 엔잡그 , B챤만화 7화 , Joker 감상 , Eville 튜토리얼)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7489786" target="_blank">03일</a> - </a href="https://youtu.be/Grcp6XTtIjw" target="_blank">라니들이랑 에빌하기~~ (발로란트 , 주잘알 테스트 , 챤잘알 테스트 , 스튜디오 이사 노가리 , 빌보두)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7508699" target="_blank">04일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/IAyzRpA4t" target="_blank">오늘 목이 굉장히 좋다....!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7489786" target="_blank">03일</a> - <a href="https://youtu.be/Grcp6XTtIjw" target="_blank">라니들이랑 에빌하기~~ (발로란트 , 주잘알 테스트 , 챤잘알 테스트 , 스튜디오 이사 노가리 , 빌보두)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7508699" target="_blank">04일</a> - </a href="https://youtu.be/AiduxFyHQKs">오늘 목이 굉장히 좋다....!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!<br>
+　　　                                                                                        (부정형 입대 , 악세사리 노가리 , 명절 친척 노가리 , 빻은 라니짤 , 노래 먹이기 , 고멤놀이터 - WF Waktaverse , 러브다이브 최초공개 , 후기 , 비하인드 사진 업로드)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/rXf6pltNd" target="_blank">초짧뱅및공지</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - </a href="https://youtu.be/0GHwsNDsXT4" target="_blank">잠을......잤습니다...</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!!</a></ul>
