--- a/Jingburger.html
+++ b/Jingburger.html
@@ -194,14 +194,44 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/6470055" target="_blank">11일</a> - </a href="" target="_blank">잰잰소통머시깽</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6501182" target="_blank">13일</a> - <a href="https://youtu.be/q5HfRM5eqlU" target="_blank">오늘은 뭘할까나 ~.~ (발로란트 , 민수데이 4회 - 하프라이프 : 알릭스 , 날씨의 아이 같이보기 , 쉬버리2)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6509321" target="_blank">14일</a> - </a href="" target="_blank">비가 왕창 내리는 날 </a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6525299" target="_blank">15일</a> - </a href="" target="_blank">버거싶은밤 라디오 2화</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6581737" target="_blank">19일</a> - <a href="https://youtu.be/N8y2j2mW7aM" target="_blank">끼야호 (자운버거 , 포로리 더빙 버거)</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6593982" target="_blank">20일</a> - <a href="https://youtu.be/J1jVScm3swU" target="_blank">헉 징버거의 상태가!!!! (첫 페이셜 , 발로란트 , 민수데이 4회차 - 똥파이더맨)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6619559" target="_blank">22일</a> - </a href="" target="_blank">으우어아악</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6525299" target="_blank">15일</a> - <a href="https://youtu.be/HOphA-rPxTc" target="_blank">버거싶은밤 라디오 2화 (버거싶은 밤 2화 - 사과)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6581737" target="_blank">19일</a> - <a href="https://youtu.be/cbo0eL1ZcZo" target="_blank">끼야호 (왜이리 변을 좋아해 언니 , 자운버거 , 포로리 더빙 버거)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6593982" target="_blank">20일</a> - <a href="https://youtu.be/NfopPw9qXVo" target="_blank">헉 징버거의 상태가!!!! (첫 페이셜 , 발로란트 , 민수데이 4회차 - 똥파이더맨)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6619559" target="_blank">22일</a> - <a href="https://youtu.be/qrtPFhJDoaM" target="_blank">으우어아악 (헬스가리 , 딸기커피 , 에? 마지? 와따시 카와이??)</a><br>
+                                                                                           　　 - <a href="https://youtu.be/B5fP0ZPFgQ8" target="_blank">버거 싶은 밤 라디오 3화 : 친구</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6670783" target="_blank">26일</a> - </a href="" target="_blank">안녕하세요 강아지님들 저는 징버거에요</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6688106" target="_blank">27일</a> - </a href="" target="_blank">워료일</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/6688106" target="_blank">28일</a> - <a href="" target="_blank">새벽반 잔잔 심즈4 (발로란트 , 노래뱅 , VRChat 풀트 , 아이네 스튜디오 햄이네 , 징버거 스튜디오 , 왁숲 , 마스터피스 맵 , 기네스버거)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6688106" target="_blank">28일</a> - </a href="" target="_blank">새벽반 잔잔 심즈4 (발로란트 , 노래뱅 , VRChat 풀트 , 아이네 스튜디오 햄이네 , 징버거 스튜디오 , 왁숲 , 마스터피스 맵 , 기네스버거)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/6722304" target="_blank">30일</a> - </a href="" target="_blank">짧뱅</a></ul>
+
+        </ul>
+
+    <p>　</p>
+
+      <ul>7월
+          <ul><a href="https://cafe.naver.com/steamindiegame/6732833" target="_blank">01일</a> - </a href="" target="_blank">띠용</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6777390" target="_blank">05일</a> - </a href="" target="_blank">초짧뱅</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6793505" target="_blank">06일</a> - </a href="" target="_blank">~.~</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6793505" target="_blank">07일</a> - <a href="https://youtu.be/W3umxYEqTT0" target="_blank">버거 싶은 밤 라디오 4화 : 어른이 되면서 잃어버린 것</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6801642" target="_blank">07일</a> - </a href="" target="_blank">계심?</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6801642" target="_blank">07일</a> - </a href="" target="_blank">왁타버스 발로란트 내전 누끼장인징버거</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6826259" target="_blank">09일</a> - </a href="" target="_blank">자몽에이두</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6833430" target="_blank">10일</a> - <a href="https://youtu.be/m12z2awCdXo" target="_blank">우잉? (방송 4주년 , 슈퍼 스트롱 버거 , 노래뱅 , 급뱅종)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6855004" target="_blank">11일</a> - </a href="" target="_blank">mbti검사해보기/밥버거/징동부래프트</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6867922" target="_blank">12일</a> - </a href="" target="_blank">잔잔 늦뱅</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6873141" target="_blank">13일</a> - <a href="https://youtu.be/1zOW_JBoojU" target="_blank">버거 싶은 밤 라디오 5화 : 첫 월급</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6919390" target="_blank">17일</a> - <a href="https://youtu.be/QUUkEIu-wZM" target="_blank">잔잔풀트탐방 (VRChat 풀트뱅 , 고멤가요제 팀 맵 탐방 , 커피만들기 , 형의 '내 사람'발언에 신남 , 노래뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6942436" target="_blank">19일</a> - </a href="" target="_blank">6시 마크 PVP수련</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6964102" target="_blank">20일</a> - <a href="https://youtu.be/x85Fvw86AD8" target="_blank">헉! (29시간 방송 1부 , 징냥이 , Stray , 게임가리)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6964269" target="_blank">21일</a> - <a href="https://youtu.be/hvbriNQ70GY" target="_blank">후열 잰잰 래프트1 (29시간 방송 1부의 연장 , 삐 처리 없는 징보이 , 10분 방송)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6964376" target="_blank">21일</a> - <a href="https://youtu.be/XyFgBwYVnV0" target="_blank">후열 잰잰 래프트2 (29시간 방송 1부의 끝과 2부의 시작 , 똥강아지 기강잡기 , 춘식님 노래듣고 운 징버거 , 래프트 시작하자마자 튕기기)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/6964376" target="_blank">21일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/xQQ07q2dX" target="_blank">후열 잰잰 래프트(진짜2) (29시간 방송 2부 징동부 래프트 엔딩 ,10만원 럭키박스 , 3부 폴가이즈 , 4부 스타크래프트 노래 맞추기 유즈맵 , 이 영상 19시간(50GB))</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7022116" target="_blank">25일</a> - <a href="https://youtu.be/RZ1wfh77CX0" target="_blank">포맷성공^_% v (무에타이 은둔 고수 징버거 , 오라버거 썰 , 형 생일 축하 썰 , 29시간 방송 뒤 형뱅 보고 로아 , 둘째가 생각하는 첫째 , 애니 더빙 노래 월드컵 128강 1부)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7022116" target="_blank">26일</a> - <a href="https://youtu.be/HNyafRnvbR8" target="_blank">애니 더빙 노래 월드컵 (급발진 노래방 주의)● (애니 더빙 노래 월드컵 128강 2부 , 노래뱅)(저작권 크리 음원교체 1구간 영상짜르기 2구간)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7089005" target="_blank">28일</a> - <a href="https://youtu.be/ImGlD-94XXU" target="_blank">6시 세븐나이츠 레볼루션(광고) (세나버거 , 세븐나이츠 : 레볼루션 광고 , 포도알 케이크 소식에 기쁨 , 클리셰모음 더빙 , 홍머기질 썰 , 이세돌 욕설모음 영상 반응 , 노래뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7089149" target="_blank">30일</a> - <a href="https://youtu.be/_OA2NkYcZLU" target="_blank">정신을 차려보니 밤이었습니다wwwwwwwwww (르르 스포티룩 vs 챠니 마린룩 , 이세돌이 모이면 의외로 말이 없는 주르르와 징버거 , 학원로맨스 로망 , VRChat 상트 , 화이트 갈릭 버거 , 징카레 , 벚꽃 구경 , 고버거 , 저챗 팔 움직이는 버거 , 공포버거 , 오 신이시여)</a></ul>
+          
+        </ul>
 
 <ul><a href=""></a>  <a href=""></a></ul>
 </span>
