--- a/Jingburger.html
+++ b/Jingburger.html
@@ -233,6 +233,31 @@
           
         </ul>
 
+<p>　</p>
+
+      <ul>8월
+          <ul><a href="https://cafe.naver.com/steamindiegame/7109425" target="_blank">01일</a> - </a href="" target="_blank">정말이지~ 못말린다니까~~(대충곤란하다는얼굴)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7119348" target="_blank">02일</a> - </a href="https://youtu.be/Y2pExjKyd8M" target="_blank">굿 (VRChat 조공 컨텐츠 - 녹색팬티 악마 , 기네스,화이트,애송이 버거 MMD월드 , BOB 1~2화 같이보기) (다시보기X)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7135102" target="_blank">04일</a> - <a href="https://youtu.be/HzbBLOXZ7Y4" target="_blank">아르마뒤져쓰빈다 (징츠동 , 새벽 아르마 연습)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7147104" target="_blank">04일</a> - <a href="https://youtu.be/Y76y_fEfqwg" target="_blank">거실에서 테레비보는 머시깽속에서 방송하기 (발로란트 , BOB 같이보기 3화 , 밥버거 센세 - 주르르 3편 ,//이 뒤로 없음// 형 사랑해.. ,톰보이 화음) (11시간 영상 가지고계신분 구함)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/61yhBsLef-8" target="_blank">8시 아르마3 랜덤고지전 기모띠 (군필버거 아바타 공개 , 아르마 1부)(앞부분짤림 영상구함)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/2kjTxRFwIPw" target="_blank">아르마3 랜덤고지전 징버거 시점 (아르마 2부 , 징탱크)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">07일</a> - <a href="https://youtu.be/bzZ4W74L3Jg" target="_blank">전장에서 패배하고 먹는 눈물젖은 군대리아 집에서 먹기 (군필버거 전신 , 군대리아 , 오라버거 별사탕 , BOB 같이보기 4화)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7184746" target="_blank">07일</a> - </a href="" target="_blank">아아~ 좋은 주말데수와</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7192549" target="_blank">09일</a> - <a href="https://youtu.be/5dJk8s058rc" target="_blank">엄청나게 짧은 (뉴버거 디자인 공개 , 이세돌 칭찬감옥 그루밍)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7234206" target="_blank">11일</a> - <a href="https://youtu.be/9fIGuN0ricY" target="_blank">뱅온 (불량식품 노가리 , 이제 누가 언니지? 리믹스 리액션 , VRChat 맵탐방 , VRChat 노래뱅 , 딸기커피 반응 , 로스트아크 , 일기 작성 , 조카랑 놀아주는 썰)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7265628" target="_blank">13일</a> - <a href="https://youtu.be/ia9OiO2FiWE" target="_blank">ㅎㅇ (VRChat 풀트버거 버추얼 마켓 탐방)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7265691" target="_blank">14일</a> - <a href="https://youtu.be/18z2SDMiHbA" target="_blank">밤바다...잔잔,.....●(멜리고(페이셜+핸드 트래킹) 버거 , 뉴아바타 , 노래뱅)(저작권 크리 4구간 짜름)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7301059" target="_blank">17일</a> - <a href="https://youtu.be/X2urlAxRYfU" target="_blank">김밥먹는소리 (VRChat 버추얼 마켓 탐방 2차 , 폴가이즈 , 뱅종곡 - 애상)</ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7313599" target="_blank">18일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/MVjtoIZmk" target="_blank">죠은밤데수와~ (팬게임 - 징버거 밈 피하기 , 나(루토)가리 , 밥버거 센세 - 주르르 4편(채신기술 도입) ,이세돌 1주년 - 소녀와 마법의 공간 M/V,  로스트아크)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7329247" target="_blank">20일</a> - <a href="https://youtu.be/hvbriNQ70GY" target="_blank">3시) ★광고☆ NARAKA : Bladepoint 스쿼드 대회 징버거 시점 (이세돌 합방(고,릴,징) - 나라카 블레이드 , 오니 버거 , 노래뱅 , 징끼얏호우~!)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7380383" target="_blank">24일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/DeTeA9nfk" target="_blank">나 시간잉 없어~~~~~~~~~~~~~~~★ ( 마크 모시깽단 모집 , 콩 먹는 비챤 칭찬 , Cult of the Lamb)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7392329" target="_blank">25일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/YEeBDD0MC" target="_blank">잔잔수련의방★ (팬덤전쟁 대비 훈련 , Cult of the Lamb完) </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7402288" target="_blank">26일</a> - <a href="https://youtu.be/0CPkL8pIuEQ" target="_blank">1주년 기모띠 (이세계 아이돌 1주년 , 1주년 기념 코스튬 , 3분할 버거 , BOB 같이보기 5화)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7433829" target="_blank">29일</a> - <a href="https://youtu.be/Jcz1wBJgBwQ" target="_blank">포도알님 저 징버거인데 저는 케이크 사게해주세요 라는 슬픈이야기 (이세돌 사망 월드컵 128강 , 폴가이즈 , 노래뱅)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7450697" target="_blank">30일</a> - <a href="https://youtu.be/7NGHiSFFBSM" target="_blank">안녕하세용 징버거에용 (징끼얏호우~! , GTA5 1편)</a></ul>
+          
+        </ul>
 <ul><a href=""></a>  <a href=""></a></ul>
 </span>
     </ul>
