--- a/Jingburger.html
+++ b/Jingburger.html
@@ -239,8 +239,8 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/7109425" target="_blank">01일</a> - </a href="" target="_blank">정말이지~ 못말린다니까~~(대충곤란하다는얼굴)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7119348" target="_blank">02일</a> - </a href="https://youtu.be/Y2pExjKyd8M" target="_blank">굿 (VRChat 조공 컨텐츠 - 녹색팬티 악마 , 기네스,화이트,애송이 버거 MMD월드 , BOB 1~2화 같이보기) (다시보기X)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7135102" target="_blank">04일</a> - <a href="https://youtu.be/HzbBLOXZ7Y4" target="_blank">아르마뒤져쓰빈다 (징츠동 , 새벽 아르마 연습)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7147104" target="_blank">04일</a> - <a href="https://youtu.be/Y76y_fEfqwg" target="_blank">거실에서 테레비보는 머시깽속에서 방송하기 (발로란트 , BOB 같이보기 3화 , 밥버거 센세 - 주르르 3편 ,//이 뒤로 없음// 형 사랑해.. ,톰보이 화음) (11시간 영상 가지고계신분 구함)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/61yhBsLef-8" target="_blank">8시 아르마3 랜덤고지전 기모띠 (군필버거 아바타 공개 , 아르마 1부)(앞부분짤림 영상구함)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7147104" target="_blank">04일</a> - <a href="https://youtu.be/Y76y_fEfqwg" target="_blank">거실에서 테레비보는 머시깽속에서 방송하기▲ (발로란트 , BOB 같이보기 3화 , 밥버거 센세 - 주르르 3편 ,//이 뒤로 없음// 형 사랑해.. ,톰보이 화음) (11시간 영상 가지고계신분 구함)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/61yhBsLef-8" target="_blank">8시 아르마3 랜덤고지전 기모띠▲ (군필버거 아바타 공개 , 아르마 1부)(앞부분짤림 영상구함)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/2kjTxRFwIPw" target="_blank">아르마3 랜덤고지전 징버거 시점 (아르마 2부 , 징탱크)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">07일</a> - <a href="https://youtu.be/bzZ4W74L3Jg" target="_blank">전장에서 패배하고 먹는 눈물젖은 군대리아 집에서 먹기 (군필버거 전신 , 군대리아 , 오라버거 별사탕 , BOB 같이보기 4화)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7184746" target="_blank">07일</a> - </a href="" target="_blank">아아~ 좋은 주말데수와</a></ul>
