--- a/Jingburger.html
+++ b/Jingburger.html
@@ -258,6 +258,29 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/7450697" target="_blank">30일</a> - <a href="https://youtu.be/7NGHiSFFBSM" target="_blank">안녕하세용 징버거에용 (징끼얏호우~! , GTA5 1편)</a></ul>
           
         </ul>
+
+  <p><br></p>
+
+
+    <ul>9월 (다시보기 내려가는대로 업데이트 될 예정)
+       <ul><a href="https://cafe.naver.com/steamindiegame/7481000" target="_blank">02일</a> - <a href="https://youtu.be/R4m3gscsRIM" target="_blank">안녕하세용 징버거에용 (Eville 연습 , GTA5 2편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7498728" target="_blank">03일</a> - </a href="" target="_blank">8시30분) 에비루 합방쓰 (왁타버스 합방 - Eville , GTA 3편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7514201" target="_blank">04일</a> - <a href="https://youtu.be/HzHb4-YjQU4" target="_blank">안녕하세용 징버거에용 (궁극기 월드컵 , 짧래뱅 , 러브다이브 최초공개 , 러브다이브 비하인드 , 노래뱅 , GTA 4편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7563841" target="_blank">08일</a> - </a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">💜포도알 인생네컷 감사하무니다💛 (세일러복 버거 공개 , 징보이 이후 빌드업 폐기썰 , VRChat 풀트뱅 - 럽다의상 , 노래뱅)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7571225" target="_blank">10일</a> - </a href="https://youtu.be/0GHwsNDsXT4" target="_blank">1시30분 추석맞이 징버거 오라버님과 간단한 저스트채팅^^</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7608824" target="_blank">12일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">좋은 밤이에용</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7630923" target="_blank">14일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">뱅온 킹애~</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7644880" target="_blank">15일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">버거등장</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7676951" target="_blank">17일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ" target="_blank">9시 고멤가요제</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7711674" target="_blank">19일</a> - </a href="https://youtu.be/A46alrH0_GM" target="_blank">사랑은 모시깽이~ 10시 OYT팬미팅! 💕</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7749172" target="_blank">22일</a> - </a href="https://youtu.be/YwGNWvWl0D4" target="_blank">죠은밤이에용~ 라ㅏ며 인사를 해봅니다</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7762978" target="_blank">23일</a> - </a href="https://youtu.be/ziitHs7XmyI" target="_blank">오늘 고멤가요제 결과발표 실화냐 가슴이 웅장해진다</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7800665" target="_blank">24일</a> - </a href="https://youtu.be/Gf0gOlyj8us" target="_blank">9시 마인크래프트 팬덤전쟁</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7833990" target="_blank">27일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">이봐 친구! 그거 알아? 징버거 방송배경음악을 고단씨가 만들어 줬다는 놀라운 사실을!</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/7861451" target="_blank">28일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">업업업업~~@</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7883897" target="_blank">30일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">뀨</a></ul>
+       
+    </ul>
 <ul><a href=""></a>  <a href=""></a></ul>
 </span>
     </ul>
