--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7489786" target="_blank">03일</a> - <a href="https://youtu.be/Grcp6XTtIjw" target="_blank">라니들이랑 에빌하기~~ (발로란트 , 주잘알 테스트 , 챤잘알 테스트 , 스튜디오 이사 노가리 , 빌보두)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7508699" target="_blank">04일</a> - <a href="https://youtu.be/AiduxFyHQKs" target="_blank">오늘 목이 굉장히 좋다....!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!<br>
 　　　                                                                                        (부정형 입대 , 악세사리 노가리 , 명절 친척 노가리 , 빻은 라니짤 , 노래 먹이기 , 고멤놀이터 - WF Waktaverse , 러브다이브 최초공개 , 후기 , 비하인드 사진 업로드)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - </a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">초짧뱅및공지 스튜디오 침수 , VR먹통 , 네이버 비밀번호 까먹음 , 쇼츠 주세요오오~ , WF Waktaverse 비하인드 및 가이드 , 러브다이브 썰 , 팬덤명 노가리</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - <a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">초짧뱅및공지 스튜디오 침수 , VR먹통 , 네이버 비밀번호 까먹음 , 쇼츠 주세요오오~ , WF Waktaverse 비하인드 및 가이드 , 러브다이브 썰 , 팬덤명 노가리</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - </a href="https://youtu.be/0GHwsNDsXT4" target="_blank">잠을......잤습니다...</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">작곡 1일차</a></ul>
