--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7508699" target="_blank">04일</a> - <a href="https://youtu.be/AiduxFyHQKs" target="_blank">오늘 목이 굉장히 좋다....!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!<br>
 　　　                                                                                        (부정형 입대 , 악세사리 노가리 , 명절 친척 노가리 , 빻은 라니짤 , 노래 먹이기 , 고멤놀이터 - WF Waktaverse , 러브다이브 최초공개 , 후기 , 비하인드 사진 업로드)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - <a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">초짧뱅및공지 스튜디오 침수 , VR먹통 , 네이버 비밀번호 까먹음 , 쇼츠 주세요오오~ , WF Waktaverse 비하인드 및 가이드 , 러브다이브 썰 , 팬덤명 노가리</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - </a href="https://youtu.be/0GHwsNDsXT4" target="_blank">잠을......잤습니다...</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - </a href="https://youtu.be/_c2rh-h4p8M" target="_blank">잠을......잤습니다... (필라테스 노가리 , 홍머 패션 노가리 , 언니가 1g이라도 사라지는건 싫어 , 민트만두가 누구야! 딱대! , 태풍 제발 꺼져!! , 스플레툰 3 , 100만포 - Calc. , B챤만화 외전 , 라니짤 모음집 , 오라버거 합방보며 친구합방 기대) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">작곡 1일차</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">운동하는뱅송</a></ul>
